@@ -36,9 +36,10 @@ START_HELP_TEXT(RL_ENGLISH)
 "       grfcodec requires that the header be commented in C++-style.\n"
 "   --data[=<dir>] -D[<dir>]\n"
 "       If <dir> is specified, look for the .renum directory in <dir>, and\n"
-"       create it if not found. Regardless of whether or not <dir> is\n"
-"       specified, eliminate the 5-second wait used to ensure that those not\n"
-"       running NFORenum from a command line can see the directory-created\n"
+"       create it if not found.\n"
+"       If <dir> is not specified, report the location of the .renum directory.\n"
+"       In either case, eliminate the 5-second wait used to ensure that those\n"
+"       not running NFORenum from a command line can see the directory-created\n"
 "       message.\n"
 "       Default: Look for  the .renum directory in the current directory, and\n"
 "       then in the environment variable HOME, if defined. If not found attempt\n"
