@@ -18,6 +18,7 @@ v3.4.3 to
 - Produce a useful error message when data files are out of sync with each
   other.
 - Variational action 2 operator 10.
+- Make --data also report the data-file location.
 
 v3.4.2 to v3.4.3 (r1244)
 - Permit Action 1/2/3 for bridges (Callback 33)
